--- a/zines/templates/zines/zine.html
+++ b/zines/templates/zines/zine.html
@@ -10,20 +10,20 @@
             <i class="material-icons md-48">add_to_photos</i>
             <div class="label">Subscribe</div>
         </a>
+        {% for author in authors %}
+            {% if author.user.id == user.id %}
+                <a href="{% url 'edit_zine' zine.id %}">
+                    <i class="material-icons md-48">edit</i>
+                    <div class="label">Edit</div>
+                </a>
+            {% endif %}
+        {% endfor %}
     {% else %}
         <a href="{% url 'login_view' %}">
             <i class="material-icons md-48">add_to_photos</i>
             <div class="label">Subscribe</div>
         </a>
     {% endif %}
-    {% for authorship in authorships %}
-        {% if authorship.user_profile == user.profile %}
-            <a href="{% url 'edit_zine' zine.id %}">
-                <i class="material-icons md-48">edit</i>
-                <div class="label">Edit</div>
-            </a>
-        {% endif %}
-    {% endfor %}
 {% endblock %}
 
 {% block body %}
