--- a/zines/templates/zines/profile.html
+++ b/zines/templates/zines/profile.html
@@ -20,7 +20,7 @@
     {% load static %}
     <div class="row">
         {% if profile.pic %}
-            <a href="{{ profile.pic.url }}"><img data-lightbox="profile" id="profile_pic" src="{{ profile.thumb.url }}"/></a>
+            <a data-lightbox="profile" href="{{ profile.pic.url }}"><img id="profile_pic" src="{{ profile.thumb.url }}"/></a>
         {% endif %}
         <h1 id="profile">{{ profile }}</h1>
         <div class="row flex" id="details">
