--- a/zines/static/zines/style.scss
+++ b/zines/static/zines/style.scss
@@ -65,7 +65,7 @@ body.editor {
     }
 }
 body.log {
-    form {
+    form#login {
         background: #eee;
         padding: 2rem;
         width: 50%;
