--- a/zines/templates/zines/base.html
+++ b/zines/templates/zines/base.html
@@ -69,6 +69,13 @@
                     </span>
                 {% endfor %}
             {% endif %}
+
+            {% if user.is_authenticated %}
+                <a href="{% url 'new_zine' %}">
+                    <i class="material-icons md-48">add</i>
+                    <div class="label">Add new zine.</div>
+                </a>
+            {% endif %}
             
             {% block editor %}
             {% endblock %}
