--- a/zines/static/zines/style.scss
+++ b/zines/static/zines/style.scss
@@ -63,6 +63,10 @@ body.editor {
         border: none;
         margin: 0 .25rem 0 0;
     }
+    .slug {
+        color: #999;
+        display: block;
+    }
 }
 body.log {
     form#login {
