--- a/zines/templates/zines/index.html
+++ b/zines/templates/zines/index.html
@@ -6,6 +6,15 @@
 
 {% block classes %}home{% endblock %}
 
+{% block editor %}
+    {% if user.is_authenticated %}
+        <a href="{% url 'new_zine' %}">
+            <i class="material-icons md-48">add</i>
+            <div class="label">Add new zine.</div>
+        </a>
+    {% endif %}
+{% endblock %}
+
 {% block body %}
     <h1>welcome</h1>
     <div class="row">
@@ -13,7 +22,7 @@
             <h3>Recently Updated Tags</h3>
             {% if recent_tags %}
                 {% for tag in recent_tags %}
-                    <a class="tag" href="{% url 'tag' tag.slug %}">#{{ tag.title }}
+                    <a class="tag" href="{% url 'tag' tag.slug %}">{{ tag.title }}
                     </a>
                 {% endfor %}
             {% else %}
