--- a/zines/static/zines/style.css
+++ b/zines/static/zines/style.css
@@ -495,6 +495,13 @@ img.preview {
   margin: 0 1rem 1rem 0;
   cursor: pointer; }
 
+ul.ui-autocomplete li {
+  border: none; }
+  ul.ui-autocomplete li .ui-state-active {
+    color: #FA4866;
+    border: none !important;
+    background: #eee; }
+
 .hide {
   display: block;
   position: absolute;
