zine banner prints full name with tagline, rewrite displaytitle for zine

--- a/zines/static/zines/style.css
+++ b/zines/static/zines/style.css
@@ -525,4 +525,4 @@ ul.ui-autocomplete li {
   text-align: center;
   margin: auto; }
 
-/*# sourceMappingURL=../../../../../../../static/zines/style.css.map */
+/*# sourceMappingURL=../../../../../../../../static/zines/style.css.map */
