--- a/zines/templates/zines/snippets/banner.html
+++ b/zines/templates/zines/snippets/banner.html
@@ -6,7 +6,7 @@
         <a href="{% url 'issue' issue.zine.id issue.number %}">
             <div class="title">
                 <h2>
-                    {{ entity.displayTitle }}
+                    {{ entity }}
                     {% if not entity.published %}(private){% endif %}
                 </h2>
             </div>
@@ -15,7 +15,7 @@
         <a href="{% url 'zine' entity.id %}">
             <div class="title">
                 <h2>
-                    {{ entity.title }}
+                    {{ entity }}
                     {% if not entity.published %}(private){% endif %}
                 </h2>
             </div>
