streamlining and reducing code

--- a/zines/templates/zines/snippets/banner.html
+++ b/zines/templates/zines/snippets/banner.html
@@ -1,5 +1,5 @@
 <div class="banner {% if height %}h{{height}}{% endif %}">
-    <div class="bg" style="background-image: url(/media/{% if entity.cover != '' %}{{ entity.cover }}{% elif entity.zine.cover %}{{ entity.zine.cover }}{% endif %})">
+    <div class="bg" style="background-image: url(/media/{% if entity.cover %}{{ entity.cover }}{% elif entity.zine.cover %}{{ entity.zine.cover }}{% endif %})">
         &nbsp;
     </div>
     {% if type == 'issue' %}
