--- a/zines/templates/zines/base.html
+++ b/zines/templates/zines/base.html
@@ -6,8 +6,8 @@
             tag&middot;a&middot;zine | {% block title %} {% endblock %}
         </title>
 
-        <!-- foundation -->
-        <link rel="stylesheet" href="{% static 'zines/foundation/css/foundation.css' %}"/>
+        <!-- bootstrap -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
         <!-- custom stylesheet -->
         {% load sass_tags %}
         <link rel="stylesheet" href="{% sass_src 'zines/style.scss' %}"/>
