--- a/zines/static/zines/style.scss
+++ b/zines/static/zines/style.scss
@@ -23,6 +23,14 @@ input:not([type=submit]), select {
         border-width: 0 0 1px 0;
     }
 }
+a {
+    &:hover {
+        text-decoration: none;
+    }
+}
+img {
+    max-width: 100%;
+}
 #search {
     i {
         display: inline-block;
@@ -288,6 +296,11 @@ body.editor {
     width: 100%;
     max-width: 60rem;
     margin: auto;
+    @media (max-width: 70rem) {
+        & > *:not(:nth-child(1)) {
+            padding-left: 5rem;
+        }
+    }
 }
 #logo {
     font-size: 50px;
@@ -386,6 +399,7 @@ h1#profile {
         width: auto;
     }
     .cover {
+        height: 100%;
         padding: 0;
         margin: 0 1rem 1rem 0;
         background: #fafafa;
