--- a/zines/templates/zines/base.html
+++ b/zines/templates/zines/base.html
@@ -26,8 +26,8 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
         <!-- lightbox -->
-        <link href="{% static 'zines/lightbox2-master/src/css/lightbox.css' %}" rel="stylesheet">
-        <script src="{% static 'zines/lightbox2-master/src/js/lightbox.js' %}"></script>
+        <link href="{% static 'zines/lightbox/src/lightbox.min.css' %}" rel="stylesheet">
+        <script src="{% static 'zines/lightbox/src/lightbox.min.js' %}"></script>
 
         <!-- Main Quill library -->
         <script src="//cdn.quilljs.com/1.1.7/quill.js"></script>
