--- a/zines/templates/zines/snippets/banner.html
+++ b/zines/templates/zines/snippets/banner.html
@@ -7,7 +7,7 @@
             <div class="title">
                 <h2>
                     {{ entity }}
-                    {% if not entity.published %}(private){% endif %}
+                    {% if not entity.published %}(draft){% endif %}
                 </h2>
             </div>
         </a>
@@ -16,7 +16,7 @@
             <div class="title">
                 <h2>
                     {{ entity }}
-                    {% if not entity.published %}(private){% endif %}
+                    {% if not entity.published %}(draft){% endif %}
                 </h2>
             </div>
         </a>
